--- a/css/style.css
+++ b/css/style.css
@@ -3,21 +3,24 @@ body {
 	line-height: 22px;
 	color: green;
 	font-weight: normal;
-	font-family: "Times New Roman", sans-serif;
+	font-family: "Times New Roman", "Tahoma", "Arial", sans-serif;
 }
 h2 {
 	font-size: 20px;
 	line-height: 26px;
 	color: black;
 	font-weight: normal;
-	font-family: "Times New Roman", sans-serif;
+	font-family: "Times New Roman", "Tahoma", "Arial", sans-serif;
 }
 h3 {
 	font-size: 18px;
 	line-height: 24px;
 	color: black;
 	font-weight: normal;
-	font-family: "Times New Roman", sans-serif;
+	font-family: "Times New Roman", "Tahoma", "Arial", sans-serif;
+}
+.main-navigation {
+    list-style: none;
 }
 .promo .promo-action:first-child {
 	background-image: url("../img/promo_raspberries.jpg");
