--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ body {
 	margin-right: 26px;
 	margin-top: 40px;
 }
-.catalog .case-catalog a {
+.catalog-cream .case-catalog a {
 	font-size: 16px;
 	line-height: 22px;
 	color: #ffffff;
