--- a/css/style.css
+++ b/css/style.css
@@ -9,15 +9,15 @@ body {
 	
 	
 }
-.container {
-	width: 1146px;
-	margin: 0 auto;
-	padding: 0;
-}
 .clearfix {
 	content: "";
     display: table;
     clear: both;
+}
+.container {
+	width: 1146px;
+	margin: 0 auto;
+	padding: 0;
 }
 .header-logo {
 	float: left;
@@ -137,6 +137,7 @@ body {
 	height: 322px;
 	margin-right: 26px;
 	margin-top: 40px;
+	margin-bottom: 40px;
 }
 .catalog .catalog-ice:last-child {
 	margin-right: 0;
@@ -180,15 +181,15 @@ body {
 	background-repeat: no-repeat;
 	margin-top: 40px;
 }
-.about {
+.description .about {
 		margin-top: 30px;
 }
-.make {
+.description .make {
 	float: left;
 	width: 476px;
 	height: 171px;
 }
-.delivery {
+.description .delivery {
 	float: right;
 	width: 470px;
 	height: 148px;
