--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,6 @@ body {
 	font-weight: normal;
 	font-family: "Roboto Medium", "Tahoma", "Arial", sans-serif;
 	background-color: #849d8f;
-	
-	
 }
 .clearfix {
 	content: "";
@@ -17,7 +15,7 @@ body {
 .container {
 	width: 1146px;
 	margin: 0 auto;
-	padding: 0;
+	padding: 0 27px;
 }
 .header-logo {
 	float: left;
@@ -167,22 +165,24 @@ body {
 	border-radius: 135px;
 }
 .goods .catalog-pages {
-	float: right;
-	margin-bottom: 50px;
+	float: right;/*
+	margin-bottom: 50px;*/
 	margin-top: 82px;
 }
 .goods .catalog-pages li {
 	display: inline;
-	margin-right: 10px;
+	margin-right: 21px;
 }
 .description {
+	width: 1146px;
 	height: 306px;
 	background-image: url("../img/wafer.jpg");
 	background-repeat: no-repeat;
 	margin-top: 40px;
+	margin-left: 27px;
 }
 .description .about {
-		margin-top: 30px;
+	margin-top: 30px;
 }
 .description .make {
 	float: left;
@@ -273,7 +273,6 @@ body {
 .social-btn {
 	display: inline;
 }
-
 .footer-contacts {
 	float: left;
 	width: 326px;
@@ -290,12 +289,8 @@ body {
 }
 .footer-copyright {
 	float: right;
-	width: 140px;
+	width: 188px;
 	margin-top: 19px;
-}
-.footer-copyright {
-	float: right;
-	width: 189px;
 }
 .footer-copyright p {
 	font-size: 12px;
